<resources>
    <string name="app_name">Ramen</string>
    <string name="btMenu">メニュー</string>
    <string name="btAdd">追加</string>
    <string name="btDelete">削除</string>
    //Textview
    <string name="tv_Soupvariation">スープの種類</string>
    //checkbox
    <string name="tv_Static1">しょうゆ</string>
    <string name="tv_Static2">しお</string>
    <string name="tv_Static3">にぼし１</string>
    <string name="tv_Static4">にぼし２</string>
    <string name="detailDialog_msg">text1</string>
    <string name="detailDialog_title">SoupTITLE</string>
    <string name="detailDialog_btn_ok">Apply</string>
    <string name="detailDialog_btn_ng">Cancel</string>
    <string name="detailDialog_msg_ok">Applied</string>
    <string name="detailDialog_msg_ng">Canceled</string>
</resources>
