<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="333dp"
        android:layout_height="295dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tv_Soupname1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:text="@string/tv_Static1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toEndOf="@+id/cbGen1"
            app:layout_constraintTop_toTopOf="@+id/cbGen1" />

        <TextView
            android:id="@+id/tvSoupvariation"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_Soupvariation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cbGen1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSoupvariation" />

        <CheckBox
            android:id="@+id/cbGen2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbGen1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/tv_Static2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cbGen2"
            app:layout_constraintTop_toTopOf="@+id/cbGen2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="628dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

        <Button
            android:id="@+id/btMenu"
            android:layout_width="116dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/btMenu" />

        <Button
            android:id="@+id/btDelete"
            android:layout_width="116dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/btDelete" />

        <Button
            android:id="@+id/btAdd"
            android:layout_width="116dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/btAdd"
            android:visibility="visible" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>